# Nodes

./: .gitignore  .swiftlint.yml  BUILD.bazel  CONTRIBUTING.md  Configuration.md  Makefile  Nodes-Package.xctestplan  Package.resolved  Package.swift  Package@swift-5.10.swift  README.md  RxSwift.md  WORKSPACE.bazel  docs.html  external.bzl  genesis.yml
.github/: release.yml
.github/workflows/: applications.yml  artifactory.yml  bazel.yml  docc.yml  genesis.yml  lint.yml  pages.yml  swift.yml  xcode.yml
Customization/: Configuration.md  Perception.md  RxSwift.md
Documentation/: Nodes User Guide.md
Sources/Executables/NodesCodeGenerator/: NodesCodeGeneratorCommand.swift
Sources/Executables/NodesXcodeTemplatesGenerator/: NodesXcodeTemplatesGeneratorCommand.swift
Sources/Nodes/Classes/: AbstractBuilder.swift  AbstractContext.swift  AbstractFlow.swift  AbstractWorker.swift
Sources/Nodes/Controllers/: FlowController.swift  WorkerController.swift
Sources/Nodes/Core/: AbstractBuilder.swift  AbstractContext.swift  AbstractFlow.swift  AbstractWorker.swift  NodeError.swift
Sources/Nodes/Debugging/: DebugInformation.swift
Sources/Nodes/Extensions/: Binding.swift  Set.swift
Sources/Nodes/Internal/: FlowController.swift  WorkerController.swift
Sources/Nodes/Plugins/: Plugin.swift  PluginList.swift  PluginMap.swift
Sources/Nodes/Protocols/: MutableState.swift  StateObserver.swift  Transform.swift
Sources/Nodes/StateManagement/: ObservableStore.swift  Store.swift
Sources/Nodes/SwiftUI/: AbstractViewHostingController.swift  Binding.swift  WithViewState.swift
Sources/Nodes/Utilities/: CurrentValuePublisher.swift  DebugInformation.swift  LeakDetector.swift
Sources/Nodes/Utility/: LeakDetector.swift
Sources/Nodes/ViewControllable/: ViewControllable.swift  ViewControllableFlow.swift  WindowSceneViewControllable.swift  WindowViewControllable.swift
Sources/Nodes/_Documentation.docc/: Nodes.md
Sources/NodesGenerator/: Config.swift  Preset.swift  PresetGenerator.swift  Resources.swift  Runfiles.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  XcodeTemplateConstants.swift  XcodeTemplateGenerator.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift  YAMLDecoder.swift
Sources/NodesGenerator/StencilContexts/: NodeStencilContext.swift  NodeV2StencilContext.swift  NodeViewInjectedStencilContext.swift
Sources/NodesGenerator/XcodeTemplatePermutations/: NodeXcodeTemplatePermutation.swift  NodeXcodeTemplateV2Permutation.swift  PluginListNodeXcodeTemplatePermutation.swift  PluginNodeXcodeTemplatePermutation.swift  PluginXcodeTemplatePermutation.swift  WorkerXcodeTemplatePermutation.swift
Sources/NodesGenerator/XcodeTemplates/: NodeXcodeTemplate.swift  NodeXcodeTemplateV2.swift  PluginListNodeXcodeTemplate.swift  PluginListXcodeTemplate.swift  PluginNodeXcodeTemplate.swift  (+1 more)
Sources/NodesTesting/: DependencyProviderRegistrationBuilder.swift  DependencyProviderRegistry.swift  PathComponent.swift  StateStoreMock.swift  StoreMocks.swift  ViewStateStoreMock.swift  XCTestCase+Needle.swift  XCTestCase.swift
Sources/NodesXcodeTemplatesGenerator/: Bundle.swift  Config.swift  Context.swift  NodePreset.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  XcodeTemplate.swift  XcodeTemplateGenerator.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift
Sources/NodesXcodeTemplatesGeneratorExecutable/: NodesXcodeTemplatesGeneratorCommand.swift
Sources/NodesXcodeTemplatesGeneratorLibrary/: Bundle.swift  Config.swift  Context.swift  Decoder.swift  FileSystem.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  Variable.swift  XcodeTemplate.swift  XcodeTemplateGenerator.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift  YAMLDecoder.swift
Sources/NodesXcodeTemplatesGeneratorTool/: ConfigFactory.swift  NodesXcodeTemplatesGeneratorCommand.swift  XcodeTemplateGeneratorCommand.swift
Sources/XcodeTemplateGeneratorLibrary/: Config.swift  Decoder.swift  FileSystem.swift  NodeStencil.swift  Optional.swift  StencilRenderer.swift  StencilTemplate.swift  UIFramework.swift  UIFrameworkCustomOptions.swift  UIFrameworkDefaults.swift  UIFrameworkOptions.swift  Variable.swift  XcodeFileTemplate.swift  XcodeTemplateGenerator.swift  XcodeTemplatePropertyList.swift  XcodeTemplates.swift  YAMLDecoder.swift  _UIFramework.swift
Sources/XcodeTemplateGeneratorTool/: XcodeTemplateGeneratorCommand.swift
Tests/NodesGeneratorTests/: ConfigTests.swift  FileSystemTests.swift  StencilContextsTests.swift  StencilRendererTests.swift  StencilTemplateTests.swift  UIFramework-FrameworkTests.swift  UIFramework-KindTests.swift  UIFrameworkFrameworkTests.swift  UIFrameworkTests.swift  XcodeTemplateConstantsTests.swift  XcodeTemplatePermutationTests.swift  XcodeTemplatePropertyListTests.swift  XcodeTemplateTests.swift
Tests/NodesTestingTests/: XCTestCase+NeedleTests.swift  XCTestCaseTests.swift
Tests/NodesTests/: NimbleMatchers.swift  NodesMocks.swift
Tests/NodesXcodeTemplatesGeneratorLibraryTests/: ConfigTests.swift  ContextsTests.swift  FileSystemMock.swift  FileSystemTests.swift  StencilRendererTests.swift  StencilTemplateTests.swift  TemplatesTests.swift  TestFactories.swift  UIFrameworkDefaultsTests.swift  UIFrameworkFrameworkTests.swift  UIFrameworkKindTests.swift  UIFrameworkTests.swift  XcodeTemplatePropertyListTests.swift  XcodeTemplatesTests.swift
Tests/NodesXcodeTemplatesGeneratorTests/: Array.swift  ConfigTests.swift  Set.swift  StencilContextsTests.swift  StencilRendererTests.swift  StencilTemplateTests.swift  TestFactories.swift  UIFrameworkFrameworkTests.swift  UIFrameworkTests.swift  XcodeTemplatesTests.swift
Tests/XcodeTemplateGeneratorLibraryTests/: ConfigTests.swift  ContextsTests.swift  FileSystemTests.swift  MockFileSystem.swift  StencilRendererTests.swift  StencilTemplateTests.swift  TemplatesTests.swift  TestFactories.swift  UIFrameworkDefaultsTests.swift  UIFrameworkFrameworkTests.swift  UIFrameworkKindTests.swift  UIFrameworkTests.swift  XcodeTemplatesTests.swift
bazel/: repositories.bzl
(+1073 files in other folders)
