load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_group", "apple_resource_bundle")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_command_line_application", "macos_bundle", "macos_unit_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")

MINIMUM_MACOS_VERSION = "10.15"
MINIMUM_IOS_VERSION = "13.0"

swift_library(
    name = "Nodes",
    srcs = glob(["Sources/Nodes/**/*.swift"]),
    visibility = ["//visibility:public"],
    copts = ["-warnings-as-errors"],
)

swift_library(
    name = "NodesTesting",
    srcs = glob(["Sources/NodesTesting/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "@Needle//:NeedleFoundation",
    ],
    copts = ["-warnings-as-errors"],
    testonly = True,
)

swift_library(
    name = "NodesXcodeTemplatesGenerator",
    srcs = glob(["Sources/NodesXcodeTemplatesGenerator/**/*.swift"]),
    data = [":NodesXcodeTemplatesGeneratorResourcesBundle"],
    visibility = ["//visibility:public"],
    deps = [
        "@Codextended",
        "@Stencil",
        "@Yams",
    ],
    copts = ["-warnings-as-errors"],
    defines = ["BAZEL"],
)

apple_resource_bundle(
    name = "NodesXcodeTemplatesGeneratorResourcesBundle",
    bundle_name = "Nodes_NodesXcodeTemplatesGenerator",
    resources = [":NodesXcodeTemplatesGeneratorResources"],
)

apple_resource_group(
    name = "NodesXcodeTemplatesGeneratorResources",
    resources = glob(["Sources/NodesXcodeTemplatesGenerator/Resources/**"]),
)

macos_command_line_application(
    name = "nodes-xcode-templates-gen",
    deps = [
        ":NodesXcodeTemplatesGeneratorExecutable",
    ],
    minimum_os_version = MINIMUM_MACOS_VERSION,
)

swift_library(
    name = "NodesXcodeTemplatesGeneratorExecutable",
    srcs = glob(["Sources/NodesXcodeTemplatesGeneratorExecutable/**/*.swift"]),
    deps = [
        ":NodesXcodeTemplatesGenerator",
        "@ArgumentParser",
    ],
    copts = ["-warnings-as-errors"],
)

macos_bundle(
    name = "Nodes_NodesXcodeTemplatesGenerator",
    bundle_id = "com.tinder.NodesXcodeTemplatesGeneratorResources",
    resources = [":NodesXcodeTemplatesGeneratorResources"],
    visibility = ["//visibility:public"],
    infoplists = ["Info.plist"],
    minimum_os_version = MINIMUM_MACOS_VERSION,
)

ios_unit_test(
    name = "NodesTests-iOS",
    deps = [
        ":NodesTests",
    ],
    minimum_os_version = MINIMUM_IOS_VERSION,
    timeout = "long",
)

swift_library(
    name = "NodesTests",
    srcs = glob(["Tests/NodesTests/**/*.swift"]),
    visibility = ["//visibility:private"],
    deps = [
        ":Nodes",
        "@Nimble",
    ],
    testonly = True,
)

ios_unit_test(
    name = "NodesTestingTests-iOS",
    deps = [
        ":NodesTestingTests",
    ],
    minimum_os_version = MINIMUM_IOS_VERSION,
    timeout = "long",
)

swift_library(
    name = "NodesTestingTests",
    srcs = glob(["Tests/NodesTestingTests/**/*.swift"]),
    visibility = ["//visibility:private"],
    deps = [
        ":NodesTesting",
        "@Nimble",
    ],
    testonly = True,
)

macos_unit_test(
    name = "NodesXcodeTemplatesGeneratorTests-macOS",
    data = glob(["Tests/NodesXcodeTemplatesGeneratorTests/__Snapshots__/**"]),
    deps = [
        ":NodesXcodeTemplatesGeneratorTests",
    ],
    minimum_os_version = MINIMUM_MACOS_VERSION,
    timeout = "long",
)

swift_library(
    name = "NodesXcodeTemplatesGeneratorTests",
    srcs = glob(["Tests/NodesXcodeTemplatesGeneratorTests/**/*.swift"]),
    visibility = ["//visibility:private"],
    deps = [
        ":NodesXcodeTemplatesGenerator",
        "@Nimble",
        "@SnapshotTesting//:SnapshotTesting",
        "@SnapshotTesting//:InlineSnapshotTesting",
    ],
    defines = ["BAZEL"],
    testonly = True,
)
