load("@build_bazel_rules_apple//apple:macos.bzl", "macos_command_line_application", "macos_bundle", "macos_unit_test")
load("@build_bazel_rules_apple//apple:ios.bzl", "ios_unit_test")
load("@build_bazel_rules_apple//apple:resources.bzl", "apple_resource_group", "apple_resource_bundle")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

MINIMUM_MACOS_VERSION = "10.15"
MINIMUM_IOS_VERSION = "13.0"

swift_library(
    name = "Nodes",
    srcs = glob(["Sources/Nodes/**/*.swift"]),
    copts = [
        "-warnings-as-errors",
        "-strict-concurrency=complete"
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "NodesTesting",
    srcs = glob(["Sources/NodesTesting/**/*.swift"]),
    visibility = ["//visibility:public"],
    deps = [
        "@Needle//:NeedleFoundation",
    ],
    copts = [
        "-warnings-as-errors",
        "-strict-concurrency=complete"
    ],
    testonly = True,
)

swift_library(
    name = "NodesGenerator",
    srcs = glob(["Sources/NodesGenerator/**/*.swift"]),
    data = [":NodesGeneratorResourcesBundle"],
    visibility = ["//visibility:public"],
    deps = [
        "@Codextended",
        "@Stencil",
        "@Yams",
    ],
    copts = [
        "-warnings-as-errors",
        "-strict-concurrency=complete"
    ],
    defines = ["BAZEL"],
)

apple_resource_bundle(
    name = "NodesGeneratorResourcesBundle",
    bundle_name = "Nodes_NodesGenerator",
    resources = [":NodesGeneratorResources"],
)

apple_resource_group(
    name = "NodesGeneratorResources",
    resources = glob(["Sources/NodesGenerator/Resources/**"]),
)

macos_command_line_application(
    name = "nodes-xcode-templates-gen",
    deps = [
        ":NodesXcodeTemplatesGenerator",
    ],
    minimum_os_version = MINIMUM_MACOS_VERSION,
)

swift_library(
    name = "NodesXcodeTemplatesGenerator",
    srcs = glob(["Sources/Executables/NodesXcodeTemplatesGenerator/**/*.swift"]),
    deps = [
        ":NodesGenerator",
        "@ArgumentParser",
    ],
    copts = [
        "-warnings-as-errors",
        "-strict-concurrency=complete"
    ],
)

macos_bundle(
    name = "Nodes_NodesGenerator",
    bundle_id = "com.tinder.NodesGeneratorResources",
    resources = [":NodesGeneratorResources"],
    visibility = ["//visibility:public"],
    infoplists = ["Info.plist"],
    minimum_os_version = MINIMUM_MACOS_VERSION,
)

ios_unit_test(
    name = "NodesTests-iOS",
    deps = [
        ":NodesTests",
    ],
    minimum_os_version = MINIMUM_IOS_VERSION,
    timeout = "long",
)

swift_library(
    name = "NodesTests",
    srcs = glob(["Tests/NodesTests/**/*.swift"]),
    visibility = ["//visibility:private"],
    deps = [
        ":Nodes",
        "@Nimble",
    ],
    testonly = True,
)

ios_unit_test(
    name = "NodesTestingTests-iOS",
    deps = [
        ":NodesTestingTests",
    ],
    minimum_os_version = MINIMUM_IOS_VERSION,
    timeout = "long",
)

swift_library(
    name = "NodesTestingTests",
    srcs = glob(["Tests/NodesTestingTests/**/*.swift"]),
    visibility = ["//visibility:private"],
    deps = [
        ":NodesTesting",
        "@Nimble",
    ],
    testonly = True,
)

macos_unit_test(
    name = "NodesGeneratorTests-macOS",
    data = glob(["Tests/NodesGeneratorTests/__Snapshots__/**"]),
    deps = [
        ":NodesGeneratorTests",
    ],
    minimum_os_version = MINIMUM_MACOS_VERSION,
    timeout = "long",
)

swift_library(
    name = "NodesGeneratorTests",
    srcs = glob(["Tests/NodesGeneratorTests/**/*.swift"]),
    visibility = ["//visibility:private"],
    deps = [
        ":NodesGenerator",
        "@Nimble",
        "@SnapshotTesting//:SnapshotTesting",
        "@SnapshotTesting//:InlineSnapshotTesting",
    ],
    defines = ["BAZEL"],
    testonly = True,
)
